--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="about__contact center">
           <a href="https://www.qrz.com/db/S54UNC">
-            <span class="btn btn--outline">Links</span>
+            <span class="btn btn--outline">S54UNC</span>
           </a>
 
           <a
@@ -80,8 +80,7 @@
           </a>
 
           
-            <i aria-hidden="true" class="fab fa-linkedin"></i>
-          </a>
+            
         </div>
       </div>
 
