--- a/index.html
+++ b/index.html
@@ -197,6 +197,12 @@
           >
             Žiga Kralj - Hlapec
           </a>
+          <a
+            href="https://jkob.cc/"
+            class="skills__list-item btn btn--plain"
+          >
+            Jakob Kordež
+          </a>
         </ul>
       </section>
 
