--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">Hekanje</li>
           <li class="skills__list-item btn btn--plain">Upori</li>
           <li class="skills__list-item btn btn--plain">Kondezatorji</li>
           <li class="skills__list-item btn btn--plain">Tuljave</li>
