--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://www.qrz.com/db/S54UNC" class="link">SS54UNC</a>
+        <a href="https://www.qrz.com/db/S54UNC" class="link">S54UNC</a>
       </h3>
 
       <nav class="nav center">
@@ -56,8 +56,8 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Primož Vovk</span></h1>
-        <h2 class="about__role">Radioamaterji na polno</h2>
+        <h1>Živ, I am <span class="about__name">Primož Vovk</span></h1>
+        <h2 class="about__role">Radioamaterji na polno. Nisem dober v vsem, ampak jezeruuu je.</h2>
         <!-- <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
           Vitae libero perferendis reprehenderit optio veritatis Accusantium at
