--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
           <li class="skills__list-item btn btn--plain">Discord</li>
           <li class="skills__list-item btn btn--plain">Excel</li>
           <li class="skills__list-item btn btn--plain">Windows</li>
+          <li class="skills__list-item btn btn--plain">Sekanje dru brez motike</li>
         </ul>
       </section>
 
