--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <li class="skills__list-item btn btn--plain">Excel</li>
           <li class="skills__list-item btn btn--plain">Windows</li>
           <li class="skills__list-item btn btn--plain">Sekanje dru brez motike</li>
+          <li class="skills__list-item btn btn--plain">Sekanje dru z lopato</li>
         </ul>
       </section>
 
