--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- About -->
       <div class="about center">
         <h1>Živ, I am <span class="about__name">Primož Vovk</span></h1>
-        <h2 class="about__role">Radioamaterji na polno. Nisem dober v vsem, ampak jezeruuu je.</h2>
+        <h2 class="about__role">Radioamaterji na polno. Nisem dober v vsem, ampak jezeruuu je, jezeru neaj. <br> Židano mleko 3,6 pa ne maščob. </h2>
         <!-- <p class="about__desc">
           Consectetur neque sed quam molestiae consectetur nesciunt sit alias
           Vitae libero perferendis reprehenderit optio veritatis Accusantium at
