--- a/index.html
+++ b/index.html
@@ -162,37 +162,13 @@
             href="https://aikenahac.com"
             class="skills__list-item btn btn--plain"
           >
-            Aiken Tine Ahac
-          </a>
-          <a
-            href="https://www.linkedin.com/in/blazdular"
-            class="skills__list-item btn btn--plain"
-          >
-            Blaž Dular
-          </a>
-          <a href="https://quartzy.me" class="skills__list-item btn btn--plain">
-            Andraž Roth
+            Aiken <b>Tine</b> Ahac
           </a>
           <a
             href="https://babnik.sync.si"
             class="skills__list-item btn btn--plain"
           >
             Matic Babnik
-          </a>
-          <a
-            href="https://timhrovat.com"
-            class="skills__list-item btn btn--plain"
-          >
-            Tim Hrovat
-          </a>
-          <a
-            href="https://markilovar.com/"
-            class="skills__list-item btn btn--plain"
-          >
-            Mark Ilovar
-          </a>
-          <a href="https://me.neet.si" class="skills__list-item btn btn--plain">
-            David Studen
           </a>
           <a
             href="https://www.zigakralj.com"
